infra/k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biddinggo-web-deploy
  namespace: biddinggo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: biddinggo-web
  template:
    metadata:
      labels:
        app: biddinggo-web
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: biddinggo-web
          image: ghcr.io/beyond-sw-camp/be25-3rd-biddingmate-biddinggo:3
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
