infra/k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: biddinggo-web-ingress
  namespace: biddinggo
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  ingressClassName: nginx
  tls:
  - secretName: biddinggo-web-tls-secret
    hosts:
    - bidding-go.shop
  rules:
  - host: bidding-go.shop
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: biddinggo-web-service
            port:
              number: 80
